# Notificare-expirare-valabilitate-documente

./: .editorconfig  .flake8  .isort.cfg  .pylintrc  Checker  README.md  pyproject.toml
validity_notifier/: checker.py
